--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
-{
-  "name": "anchor-frontend",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "^1.3.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.2"
-  }
+"dependencies": {
+  "next": "13",
+  "react": "18",
+  "react-dom": "18",
+  "axios": "^1.3.4"
+},
+"devDependencies": {
+  "autoprefixer": "10",
+  "postcss": "8",
+  "tailwindcss": "3"
 }
